# SugerJson

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  JsonBase.hpp  JsonError.hpp  JsonReader.hpp  JsonType.hpp  JsonValue.hpp
include/detail/: JsonArray.hpp  JsonBool.hpp  JsonImp.hpp  JsonNumber.hpp  JsonObject.hpp  JsonString.hpp  tool.hpp
src/: CMakeLists.txt  JsonError.cpp  JsonIterator.cpp  JsonReader.cpp  JsonValue.cpp
src/detail/: JsonArray.cpp  JsonBool.cpp  JsonNumber.cpp  JsonObject.cpp  JsonString.cpp  tool.cpp
src/example/: CMakeLists.txt  readJson.cpp  readJson.json  readJsonErr.json  useJson.cpp
